﻿Pulse_Waves Changelog

Pulse_Waves-1.3.0
 - Fixed the Prediction model by changing the System Init Time from 0.25sec to 2.4sec.

Pulse_Waves-1.2.2
 - Fix bug loading Wavector.
 - Added a default path for Wavector.
 - Updated the Prediction model on startup.  
 - Fixed bug with not passing BurstInterval to prediction model.
 - RtiWavesEncoder, fixed a bug iterating through the list of MATLAB files and list is changed.

Pulse_Waves-1.2.1
 - Fixed bug in Prediction model with calculating the data storage.

Pulse_Waves-1.2.0
  - Updated the prediction model.

Pulse_Waves-1.1.8
 - Set CWPTBP automatically based off CEI and number of pings.

Pulse_Waves-1.1.7
 - Changed file import to handle large files.

Pulse_Waves-1.1.6
 - In WavesSubsystemConfigurationViewModel, fixed bug with prediction models for subsystem being out of sync with main prediciton model.
 - In WavesSubsystemConfigurationViewModel, fixed bug where CWPP was 1 but CWPTBP had a value.

Pulse_Waves-1.1.5
 - Fixed the font color in text boxes.
 - Added CSAVE to SetCETFPtoAdcp().

Pulse_Waves-1.1.4
 - Fixed bug in prediction model of waves velocity.
 - Fixed DateTimePicker.
 - Removed auto setting true for interleaved.

Pulse_Waves-1.1.3
 - Updated the prediction model.
 - Added Range Tracking.

Pulse_Waves-1.1.2
 - Made the prediction model scroll vertical instead of horizontal.

Pulse_Waves-1.1.1
 - In RecoverDataViewModel, select ENS and BIN as default options for playback files.
 - Make it look for the Wavector exe text file in Pulse_Waves folder and not Pulse folder.

Pulse_Waves-1.1.0
 - Updated Wavector icon and label.
 - Fixed installer add Pulse.db.

Pulse_Wave-1.0.0
 - In WavesSubsystemConfigurationViewModel, added UpdateCEI() to update all the CEI in each VM.
 - In WavesSetupViewModel, added UpdateCEI() to update all the CEI commands for each VM.
 - In RtiWavesEncoder, fixed bug if the burst is only a 4beam or vertical, no interleave, then set the correct sample time in WavesCreateMatFile().