@@ -1,5 +1,8 @@
 ﻿Pulse_Waves Changelog
 
+Pulse_Waves-1.3.1
+ - Change default RangeTracking to Pressure.
+
 Pulse_Waves-1.3.0
  - Fixed the Prediction model by changing the System Init Time from 0.25sec to 2.4sec.
 
